src/test/resources/fdl/cocos/invalid/UnknownAliasIdentifier.fdl
FDL UnknownAliasIdentifier {
  EQUATION m^^{.} = V^^{.} * @rho_{"s"}
  WITH:
    ALIASES:
      p^^{.} = "Massestrom";
}